Fix gap on `profile-card` between name and handle (#556)

--- a/_sass/components/_card.scss
+++ b/_sass/components/_card.scss
@@ -35,7 +35,7 @@
   > .name {
     font-weight: 500;
     font-size: 112.5%;
-    &:not(:last-child) {
+    &:where(:not(:last-child)) {
       margin-block-end: auto;
     }
 
